Define notation for transpose of inverse

--- a/report/report.tex
+++ b/report/report.tex
@@ -102,7 +102,7 @@ The implementation of the gradient-free kernel Stein thinning was contributed by
 
 \chapter*{Notation}
 
-For a matrix $A$, we use use $A^T$ to denote the transpose of $A$. The matrix $A^{1/2}$ is called the square root of $A$ if it satisfies $A^{1/2} A^{1/2} = A$. $A^{-1}$ is the inverse of $A$, if it exists. $I$ stands for the identity matrix of an appropriate dimension.
+For a matrix $A$, we use use $A^T$ to denote the transpose of $A$. The matrix $A^{1/2}$ is called the square root of $A$ if it satisfies $A^{1/2} A^{1/2} = A$. $A^{-1}$ is the inverse of $A$, if it exists, and $A^{-T} = (A^{-1})^T$. $I$ stands for the identity matrix of an appropriate dimension.
 
 We use $\langle x, y \rangle$ to denote the scalar product of $x$ and $y$, and $\| x \|$ to denote the norm of $x$.
 
