Save figures in PDF rather than EPS

--- a/code/notebooks/lotka_volterra/Comparison.ipynb
+++ b/code/notebooks/lotka_volterra/Comparison.ipynb
@@ -448,16 +448,15 @@
       "DEBUG:utils.caching:Reading from disk cache: rw_energy_distance_4_rw_st_log_idx\n",
       "DEBUG:utils.caching:Reading from S3 gradient-free-mcmc-postprocessing/rw_energy_distance_4_rw_st_log_idx.npy\n",
       "DEBUG:utils.caching:Reading from disk cache: rw_energy_distance_naive_4\n",
-      "DEBUG:utils.caching:Reading from S3 gradient-free-mcmc-postprocessing/rw_energy_distance_naive_4.npy\n",
-      "WARNING:matplotlib.backends.backend_ps:The PostScript backend does not support transparency; partially transparent artists will be rendered opaque.\n"
+      "DEBUG:utils.caching:Reading from S3 gradient-free-mcmc-postprocessing/rw_energy_distance_naive_4.npy\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 2.45 s, sys: 48.5 ms, total: 2.5 s\n",
-      "Wall time: 6.67 s\n"
+      "CPU times: user 2.45 s, sys: 63.7 ms, total: 2.51 s\n",
+      "Wall time: 6.52 s\n"
      ]
     },
     {
@@ -476,7 +475,7 @@
     "fig, axs = plot_comparison(get_indices, indices1, y_label='Energy distance')\n",
     "handles, labels = axs[0].get_legend_handles_labels()\n",
     "fig.legend(handles, labels, loc='lower center', bbox_to_anchor=(0.52, -0.08), ncol=len(labels), bbox_transform=fig.transFigure);\n",
-    "fig.savefig(FIGURES_PATH / 'lotka-volterra-stein-thinning-energy-distance.eps', bbox_inches='tight');"
+    "fig.savefig(FIGURES_PATH / 'lotka-volterra-stein-thinning-energy-distance.pdf', bbox_inches='tight', metadata={'CreationDate': None});"
    ]
   },
   {
@@ -575,16 +574,15 @@
       "DEBUG:utils.caching:Reading from disk cache: rw_ksd_4_rw_st_log_idx\n",
       "DEBUG:utils.caching:Reading from S3 gradient-free-mcmc-postprocessing/rw_ksd_4_rw_st_log_idx.npy\n",
       "DEBUG:utils.caching:Reading from disk cache: rw_ksd_naive_4\n",
-      "DEBUG:utils.caching:Reading from S3 gradient-free-mcmc-postprocessing/rw_ksd_naive_4.npy\n",
-      "WARNING:matplotlib.backends.backend_ps:The PostScript backend does not support transparency; partially transparent artists will be rendered opaque.\n"
+      "DEBUG:utils.caching:Reading from S3 gradient-free-mcmc-postprocessing/rw_ksd_naive_4.npy\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 3.35 s, sys: 35.9 ms, total: 3.39 s\n",
-      "Wall time: 7.81 s\n"
+      "CPU times: user 3.61 s, sys: 36.5 ms, total: 3.64 s\n",
+      "Wall time: 7.87 s\n"
      ]
     },
     {
@@ -603,7 +601,7 @@
     "fig, axs = plot_comparison(get_indices_ksd, indices1, y_label='Kernel Stein discrepancy', y_scale='log')\n",
     "handles, labels = axs[0].get_legend_handles_labels()\n",
     "fig.legend(handles, labels, loc='lower center', bbox_to_anchor=(0.52, -0.08), ncol=len(labels), bbox_transform=fig.transFigure);\n",
-    "fig.savefig(FIGURES_PATH / 'lotka-volterra-stein-thinning-ksd.eps', bbox_inches='tight');"
+    "fig.savefig(FIGURES_PATH / 'lotka-volterra-stein-thinning-ksd.pdf', bbox_inches='tight', metadata={'CreationDate': None});"
    ]
   },
   {
@@ -646,16 +644,15 @@
       "DEBUG:utils.caching:Reading from disk cache: rw_energy_distance_3_rw_gf_simple_gaussian_idx\n",
       "DEBUG:utils.caching:Reading from S3 gradient-free-mcmc-postprocessing/rw_energy_distance_3_rw_gf_simple_gaussian_idx.npy\n",
       "DEBUG:utils.caching:Reading from disk cache: rw_energy_distance_4_rw_gf_simple_gaussian_idx\n",
-      "DEBUG:utils.caching:Reading from S3 gradient-free-mcmc-postprocessing/rw_energy_distance_4_rw_gf_simple_gaussian_idx.npy\n",
-      "WARNING:matplotlib.backends.backend_ps:The PostScript backend does not support transparency; partially transparent artists will be rendered opaque.\n"
+      "DEBUG:utils.caching:Reading from S3 gradient-free-mcmc-postprocessing/rw_energy_distance_4_rw_gf_simple_gaussian_idx.npy\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 2.05 s, sys: 39.9 ms, total: 2.09 s\n",
-      "Wall time: 3.63 s\n"
+      "CPU times: user 2.17 s, sys: 31.4 ms, total: 2.2 s\n",
+      "Wall time: 3.79 s\n"
      ]
     },
     {
@@ -674,7 +671,7 @@
     "fig, axs = plot_comparison(get_indices, indices2, y_label='Energy distance')\n",
     "handles, labels = axs[0].get_legend_handles_labels()\n",
     "fig.legend(handles, labels, loc='lower center', bbox_to_anchor=(0.52, -0.08), ncol=len(labels), bbox_transform=fig.transFigure);\n",
-    "fig.savefig(FIGURES_PATH / 'lotka-volterra-gf-thinning-energy-distance.eps', bbox_inches='tight');"
+    "fig.savefig(FIGURES_PATH / 'lotka-volterra-gf-thinning-energy-distance.pdf', bbox_inches='tight', metadata={'CreationDate': None});"
    ]
   },
   {
@@ -698,16 +695,15 @@
       "DEBUG:utils.caching:Reading from disk cache: rw_ksd_3_rw_gf_simple_gaussian_idx\n",
       "DEBUG:utils.caching:Reading from S3 gradient-free-mcmc-postprocessing/rw_ksd_3_rw_gf_simple_gaussian_idx.npy\n",
       "DEBUG:utils.caching:Reading from disk cache: rw_ksd_4_rw_gf_simple_gaussian_idx\n",
-      "DEBUG:utils.caching:Reading from S3 gradient-free-mcmc-postprocessing/rw_ksd_4_rw_gf_simple_gaussian_idx.npy\n",
-      "WARNING:matplotlib.backends.backend_ps:The PostScript backend does not support transparency; partially transparent artists will be rendered opaque.\n"
+      "DEBUG:utils.caching:Reading from S3 gradient-free-mcmc-postprocessing/rw_ksd_4_rw_gf_simple_gaussian_idx.npy\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 3.07 s, sys: 24.1 ms, total: 3.09 s\n",
-      "Wall time: 4.4 s\n"
+      "CPU times: user 3.3 s, sys: 27.9 ms, total: 3.33 s\n",
+      "Wall time: 4.71 s\n"
      ]
     },
     {
@@ -726,7 +722,7 @@
     "fig, axs = plot_comparison(get_indices_ksd, indices2, y_label='Kernel Stein discrepancy', y_scale='log')\n",
     "handles, labels = axs[0].get_legend_handles_labels()\n",
     "fig.legend(handles, labels, loc='lower center', bbox_to_anchor=(0.52, -0.08), ncol=len(labels), bbox_transform=fig.transFigure);\n",
-    "fig.savefig(FIGURES_PATH / 'lotka-volterra-gf-thinning-ksd.eps', bbox_inches='tight');"
+    "fig.savefig(FIGURES_PATH / 'lotka-volterra-gf-thinning-ksd.pdf', bbox_inches='tight', metadata={'CreationDate': None});"
    ]
   },
   {
@@ -748,7 +744,7 @@
     {
      "data": {
       "text/plain": [
-       "54.912524700164795"
+       "53.9399847984314"
       ]
      },
      "execution_count": 34,
