--- a/code/notebooks/lotka_volterra/Sampling.ipynb
+++ b/code/notebooks/lotka_volterra/Sampling.ipynb
@@ -152,7 +152,7 @@
     "    axs[i].set_xlabel('t');\n",
     "    axs[i].set_ylabel(f'$u_{i + 1}(t)$');\n",
     "\n",
-    "fig.savefig(FIGURES_PATH / 'lotka-volterra.eps');"
+    "fig.savefig(FIGURES_PATH / 'lotka-volterra.pdf', metadata={'CreationDate': None});"
    ]
   },
   {
@@ -343,7 +343,7 @@
    ],
    "source": [
     "fig = plot_traces(rw_samples, titles=[f'Chain {i + 1}' for i in range(len(rw_samples))], var_labels=var_labels);\n",
-    "fig.savefig(FIGURES_PATH / 'lotka-volterra-trace-plots.eps');"
+    "fig.savefig(FIGURES_PATH / 'lotka-volterra-trace-plots.pdf', metadata={'CreationDate': None});"
    ]
   },
   {
@@ -1082,7 +1082,7 @@
     {
      "data": {
       "text/plain": [
-       "76.56633496284485"
+       "87.9320924282074"
       ]
      },
      "execution_count": 40,
