--- a/report/report.tex
+++ b/report/report.tex
@@ -532,7 +532,7 @@ In \Cref{fig:gmm:laplace-terms}(a) and (b), we show the scale of the two terms o
 \begin{figure}[t]
 \centering
 \makebox[\textwidth][c]{
-	\includegraphics[width=1.0\textwidth]{gaussian-mixture-laplace-terms.eps}
+	\includegraphics[width=1.0\textwidth]{gaussian-mixture-laplace-terms.pdf}
 }
 \caption{Scale of the terms involved in the first two iterations of \Cref{alg:gf} for the bivariate Gaussian mixture with an auxiliary distribution based on the Laplace approximation.
 \label{fig:gmm:laplace-terms}}
@@ -594,7 +594,7 @@ Finally, \Cref{fig:gmm:comparison} compares the energy distance achieved by thin
 \begin{figure}[t]
 \centering
 \makebox[\textwidth][c]{
-	\includegraphics[width=1.0\textwidth]{gaussian-mixture-comparison.eps}
+	\includegraphics[width=1.0\textwidth]{gaussian-mixture-comparison.pdf}
 }
 \caption{Comparison between thinning approaches for the bivariate Gaussian mixture sample.
 \label{fig:gmm:comparison}}
@@ -624,7 +624,7 @@ We take $u(t;\theta^*)$ to be generated for $t \in [0, 25]$ by the model~(\ref{e
 \begin{figure}[t]
 \centering
 \makebox[\textwidth][c]{
-	\includegraphics[width=1.0\textwidth]{lotka-volterra.eps}
+	\includegraphics[width=1.0\textwidth]{lotka-volterra.pdf}
 }
 \caption{Solution to the Lotka-Volterra ODEs (black) with added Gaussian noise (grey).
 \label{fig:lotka-volterra:data}}
@@ -735,7 +735,7 @@ Comparing the performance of Stein thinning against na\"ive thinning (\Cref{fig:
 \begin{figure}[t]
 \centering
 \makebox[\textwidth][c]{
-	\includegraphics[width=1.0\textwidth]{lotka-volterra-stein-thinning-energy-distance.eps}
+	\includegraphics[width=1.0\textwidth]{lotka-volterra-stein-thinning-energy-distance.pdf}
 }
 \caption{Energy distance comparison between Stein thinning (in linear and logarithmic space) and na\"ive thinning for MCMC chains in the Lotka-Volterra inverse problem.
 \label{fig:lotka-volterra:stein-thinning:energy-distance}}
@@ -750,7 +750,7 @@ As in the case of the Gaussian mixture, the Laplace approximation fails to produ
 \begin{figure}[t]
 \centering
 \makebox[\textwidth][c]{
-	\includegraphics[width=1.0\textwidth]{lotka-volterra-gf-thinning-energy-distance.eps}
+	\includegraphics[width=1.0\textwidth]{lotka-volterra-gf-thinning-energy-distance.pdf}
 }
 \caption{Energy distance comparison between gradient-free and standard Stein thinning for the Lotka-Volterra inverse problem.
 \label{fig:lotka-volterra:gf-thinning:energy-distance}}
@@ -761,7 +761,7 @@ It is perhaps surprising that gradient-free thinning, being an approximation, ac
 \begin{figure}[t]
 \centering
 \makebox[\textwidth][c]{
-	\includegraphics[width=1.0\textwidth]{lotka-volterra-gf-thinning-ksd.eps}
+	\includegraphics[width=1.0\textwidth]{lotka-volterra-gf-thinning-ksd.pdf}
 }
 \caption{Kernel Stein discrepancy comparison between gradient-free and standard Stein thinning for the Lotka-Volterra inverse problem.
 \label{fig:lotka-volterra:gf-thinning:ksd}}
@@ -909,7 +909,7 @@ For the Lotka-Volterra model~(\ref{eq:lotka-volterra}), this yields eight additi
 \begin{figure}[h]
 \centering
 \makebox[\textwidth][c]{
-	\includegraphics[width=0.8\textwidth]{lotka-volterra-trace-plots.eps}
+	\includegraphics[width=0.8\textwidth]{lotka-volterra-trace-plots.pdf}
 }
 \caption{Trace plots from the random-walk Metropolis-Hastings algorithm for the Lotka-Volterra inverse problem.
 \label{fig:lotka-volterra:trace-plots}}
